--- a/MinyToDo.Abstract/MinyToDo.Abstract.csproj
+++ b/MinyToDo.Abstract/MinyToDo.Abstract.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\MinyToDo.Entity\MinyToDo.Entity.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
