--- a/MinyToDo.Data/MinyToDo.Data.csproj
+++ b/MinyToDo.Data/MinyToDo.Data.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.1" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="../MinyToDo.Abstract/MinyToDo.Abstract.csproj" />
+  </ItemGroup>
 </Project>
