--- a/MinyToDo.Api/appsettings.Development.json
+++ b/MinyToDo.Api/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "dev": "Server=localhost;Port=5432;Username=todoadmin;Password=root1234;Database=MinyToDo.Dev"
   }
 }
