--- a/MinyToDo.Service/MinyToDo.Service.csproj
+++ b/MinyToDo.Service/MinyToDo.Service.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\MinyToDo.Data\MinyToDo.Data.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
