Added Secret for Jwt

--- a/MinyToDo.Api/appsettings.Development.json
+++ b/MinyToDo.Api/appsettings.Development.json
@@ -8,5 +8,8 @@
   },
   "ConnectionStrings": {
     "dev": "Server=localhost;Port=5432;Username=todoadmin;Password=root1234;Database=MinyToDo.Dev"
+  },
+  "Jwt": {
+    "Secret": "Kim milyoner olmak istere çıkan hacker bebenin bulamayacağı secret key"
   }
 }
