--- a/MinyToDo.Service/MinyToDo.Service.csproj
+++ b/MinyToDo.Service/MinyToDo.Service.csproj
@@ -7,5 +7,8 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
+  
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+  </ItemGroup>
 </Project>
