--- a/MinyToDo.Api/MinyToDo.Api.csproj
+++ b/MinyToDo.Api/MinyToDo.Api.csproj
@@ -12,10 +12,14 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <!-- Remove comment when you need to do "dotnet ef migrations". After the migration, restore it.
+    
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+
+    -->
   </ItemGroup>
 
 </Project>
