Update README.md & Move src directory

--- a/MinyToDo.WebAPI/Properties/launchSettings.json
+++ b/MinyToDo.WebAPI/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "MinyToDo.Api": {
+    "MinyToDo.WebAPI": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
